# taxi-system-arch

./: .gitignore  readme.md  workspace.dsl
Documentation/: workspace.dsl
taxi-service/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
taxi-service-mongodb/: CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  docker-compose.yaml  performance_design.md  test-rate-limit.sh
taxi-service-mongodb-rabbitmq/: CMakeLists.txt  Dockerfile  README.md  demo-rate-limiting.sh  docker-compose.yaml  event_catalog.md  event_driven_design.md  openapi.yaml  test-api.sh  test-docker.sh
taxi-service-mongodb-rabbitmq/configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
taxi-service-mongodb-rabbitmq/scripts/: queries.js
taxi-service-mongodb-rabbitmq/src/: main.cpp
taxi-service-mongodb-rabbitmq/src/auth/: jwt_manager.cpp
taxi-service-mongodb-rabbitmq/src/cache/: redis_client.hpp
taxi-service-mongodb-rabbitmq/src/event_consumer/: event_logger.cpp  event_logger.hpp
taxi-service-mongodb-rabbitmq/src/events/: event_producer.cpp  event_producer.hpp  event_publisher.cpp  event_publisher.hpp  event_publisher_component.cpp  event_publisher_component.hpp  event_types.cpp  event_types.hpp
taxi-service-mongodb-rabbitmq/src/handlers/: accept_ride.cpp  accept_ride.hpp  complete_ride.cpp  complete_ride.hpp  create_ride.cpp  create_ride.hpp  find_user.hpp  (+8 more)
taxi-service-mongodb-rabbitmq/tests/: conftest.py  test_basic.py
taxi-service-mongodb/configs/: config_vars.yaml  static_config.yaml
taxi-service-mongodb/scripts/: aggregations.js  mongo-init.js  validation.js
taxi-service-mongodb/src/: main.cpp
taxi-service-mongodb/src/auth/: auth_middleware.hpp  jwt_manager.cpp  jwt_manager.hpp
taxi-service-mongodb/src/cache/: cache_keys.hpp  redis_client.cpp
taxi-service-mongodb/src/handlers/: accept_ride.cpp  auth_login.cpp  auth_login.hpp  auth_register.cpp  auth_register.hpp  complete_ride.cpp  create_ride.cpp  find_user.cpp  find_user_by_login.cpp  find_user_by_login.hpp  get_active_rides.cpp  get_user_rides.cpp  get_user_rides.hpp  openapi_handler.hpp  register_user.cpp  register_user.hpp  search_users_by_name.cpp
taxi-service-mongodb/src/models/: driver.hpp  ride.hpp  user.hpp
taxi-service-mongodb/src/rate_limit/: rate_limit_middleware.hpp  token_bucket.hpp
taxi-service-mongodb/src/tests/: unit_test.cpp
taxi-service/configs/: config_vars.yaml  static_config.yaml
taxi-service/sql/: data.sql  optimization.md  queries.sql  schema.sql
taxi-service/src/: main.cpp
(+41 files in other folders)
